# mongodb-demos

./: .gitignore  README.md  config-rep.js  createUser-dbProducts.js  create_mongodba.js  enron_search.js  ha-mdb.sh  key-bindip-replset-mongod.sh  key-rep.js  key-replset-mongod.sh  mdb-ha-demo.md  mgmt-users.js  mongo-success.js  mongo.js  mongodb-key-file  package.json  permanent-mongod.sh  replset-mongod-noauth.sh  repstatus_looper.js  search-demo-index.js  standalone-mongod-noauth.sh  vault-root-token.txt  x-509.txt
charts/sales/: Demo-charts.txt
config/: mongod.conf  mongod1.conf  mongod2.conf  mongodcfg.conf  mongos.conf
conntest/: nodeconnect.js  package-lock.json  package.json
dataLake/: storageSetConfig.js
dataLake/data/airbnb/: listingsAndReviews-chunk.aa.json  listingsAndReviews-chunk.ab.json  listingsAndReviews-chunk.ac.json  listingsAndReviews-chunk.ad.json  listingsAndReviews-chunk.ae.json  listingsAndReviews-chunk.af.json  listingsAndReviews-chunk.ag.json  listingsAndReviews-chunk.ah.json  listingsAndReviews-chunk.ai.json  listingsAndReviews-chunk.aj.json  listingsAndReviews-chunk.ak.json  listingsAndReviews-chunk.al.json  listingsAndReviews-chunk.am.json  listingsAndReviews-chunk.an.json  listingsAndReviews-chunk.ao.json  listingsAndReviews-chunk.ap.json  listingsAndReviews-chunk.aq.json  listingsAndReviews-chunk.ar.json  listingsAndReviews-chunk.as.json  listingsAndReviews-chunk.at.json  listingsAndReviews-chunk.au.json  listingsAndReviews-chunk.av.json  listingsAndReviews-chunk.aw.json  listingsAndReviews-chunk.ax.json  listingsAndReviews-chunk.ay.json  listingsAndReviews-chunk.az.json  listingsAndReviews-chunk.ba.json  listingsAndReviews-chunk.bb.json  listingsAndReviews-chunk.bc.json  listingsAndReviews-chunk.bd.json  listingsAndReviews-chunk.be.json  listingsAndReviews-chunk.bf.json  listingsAndReviews-chunk.bg.json  listingsAndReviews-chunk.bh.json  listingsAndReviews-chunk.bi.json  listingsAndReviews-chunk.bj.json  listingsAndReviews-chunk.bk.json  listingsAndReviews-chunk.bl.json  listingsAndReviews-chunk.bm.json  listingsAndReviews-chunk.bn.json  (+16 more)
dataLake/data/restaurants/: reviews-1-chunk.aa  reviews-1-chunk.ab  reviews-1-chunk.ac  reviews-1-chunk.ad  reviews-1-chunk.ae  reviews-1-chunk.af  reviews-1-chunk.ag  reviews-1-chunk.ah  reviews-1-chunk.ai  reviews-1-chunk.aj  reviews-1-chunk.ak  reviews-1-chunk.al  reviews-1-chunk.am  reviews-1-chunk.an  reviews-1-chunk.ao  reviews-1-chunk.ap  reviews-1-chunk.aq  reviews-1-chunk.ar  reviews-1-chunk.as  reviews-1-chunk.at  reviews-1-chunk.au  reviews-1-chunk.av  reviews-1-chunk.aw  reviews-1-chunk.ax  reviews-1-chunk.ay  reviews-1-chunk.az  reviews-1-chunk.ba  reviews-1-chunk.bb  reviews-1-chunk.bc  reviews-1-chunk.bd  reviews-1-chunk.be  reviews-1-chunk.bf  reviews-1-chunk.bg  reviews-1-chunk.bh  reviews-1-chunk.bi  reviews-1-chunk.bj  reviews-1-chunk.bk  reviews-1-chunk.bl  reviews-1-chunk.bm  reviews-1-chunk.bn  (+639 more)
dataLake/data/weather/: weather_data-chunk.aa.json  weather_data-chunk.ab.json  weather_data-chunk.ac.json  weather_data-chunk.ad.json  weather_data-chunk.ae.json  weather_data-chunk.af.json  weather_data-chunk.ag.json  weather_data-chunk.ah.json  weather_data-chunk.ai.json  weather_data-chunk.aj.json  weather_data-chunk.ak.json  weather_data-chunk.al.json  weather_data-chunk.am.json  weather_data-chunk.an.json  weather_data-chunk.ao.json  weather_data-chunk.ap.json  weather_data-chunk.aq.json  weather_data-chunk.ar.json  weather_data-chunk.as.json  weather_data-chunk.at.json  weather_data-chunk.au.json  weather_data-chunk.av.json  weather_data-chunk.aw.json  weather_data-chunk.ax.json  weather_data-chunk.ay.json  weather_data-chunk.az.json  weather_data-chunk.ba.json  weather_data-chunk.bb.json  weather_data-chunk.bc.json  weather_data-chunk.bd.json  weather_data-chunk.be.json  weather_data-chunk.bf.json  weather_data-chunk.bg.json  weather_data-chunk.bh.json  weather_data-chunk.bi.json  weather_data-chunk.bj.json  weather_data-chunk.bk.json  weather_data-chunk.bl.json  weather_data-chunk.bm.json  weather_data-chunk.bn.json  (+10 more)
docValidation/: README.md
docs/: index.md  keyfile
field-level-encryption/: create-data-encryption-keys.js  create-local-master-key.js  main.js  package-lock.json  package.json  work.js
history/: ec2-vault-history.txt  root-vault-history.txt
mdb-transactions/: mongo-transactions-demo.js
security/: cleandir.sh  config-rep.js  demo-transactions-2phase.js  demo-transactions-mdb4.js  dynamic-schema-demo.sh  example-ssl-secure-commands.sh  insert_data.py  keyfilemarcelo  laptop-permanent-mongod.sh  mongo-error-wrong-db.js  mongo-error-wrong-port.js  mongodb-keyfile  mongodb-start.sh  package-lock.json  permanent-mongod.sh  search-demo-index.js  standalone-mongod-noauth.sh  vault.sh  work-transactions.js
