    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-20T00:00:00.000Z"
    },
    "reviewTitle": "Look forward to staying there again!",
    "reviewText": "Very nice place with helpful staff and a wide array of breakfast choices! Nice clean room. Beds were a little soft for our tastes but we still slept well. Walking distance to fast food and just off 65 Highway for easy access to I-44 or Branson. Would definitely stay there again. Great deal for the money!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-03T00:00:00.000Z"
    },
    "reviewTitle": "Affordable and accommodating right off highway",
    "reviewText": "Exactly what we needed on our way back east. Great middle of the line room with no complaints.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-02T00:00:00.000Z"
    },
    "reviewTitle": "Greenstay stay",
    "reviewText": "Mostly only stayed to sleep. The pool was nice and the turn down service options to conserve energy and water was nice. Walls were super thin I could hear the persons besides and below me and the hall echoed. It was nice to have the fridge and microwave. The breakfast was also nice.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-07T00:00:00.000Z"
    },
    "reviewTitle": "Nice facilities.  Friendly staff.",
    "reviewText": "Facilities were clean and inviting. Great for the price.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-17T00:00:00.000Z"
    },
    "reviewTitle": "Nice facilities.  Friendly staff.",
    "reviewText": "The hotel was amazing. We will definitely stay again. The room was really clean. The employees were very friendly. Breakfast was amazing. Bed was very comfortable. Like that there was a fridge, microwave and coffee pot in the room.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-16T00:00:00.000Z"
    },
    "reviewTitle": "Convenient",
    "reviewText": "We have stayed at this hotel before, but were disappointed this time, mainly because the room had a very strong odor. I think they need to get rid of the carpeting. Didn't smell it in the hall, but as soon as you opened the door to the room, your were hit with it. They do have a good breakfast.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-26T00:00:00.000Z"
    },
    "reviewTitle": "I definitely would recommend this Hotel.",
    "reviewText": "Very nice and many upgrades since my prior years visits.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-07T00:00:00.000Z"
    },
    "reviewTitle": "Best Ever!",
    "reviewText": "Most wonderful stay! Will come back again!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-17T00:00:00.000Z"
    },
    "reviewTitle": "Dirty common areas",
    "reviewText": "Common areas were not clean Breakfast room was in bad need of mopping stains on all floors in common areas...elevator dirty floor and walls",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 2
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-04-27T00:00:00.000Z"
    },
    "reviewTitle": "A great place to stay.",
    "reviewText": "No complaints. My stay was pleasant. Wasn't used to the trains passing close by during the night but not something that kept me from sleeping. Lobby and breakfast area have been updated and reconfigured very nicely. Little touches like having a hot drink dispenser available in the lobby is thoughtful and appreciated.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-03T00:00:00.000Z"
    },
    "reviewTitle": "Great Place to Stay!",
    "reviewText": "Clean,Comfortable,Friendly Staff,and Value Priced for 3 days!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-01T00:00:00.000Z"
    },
    "reviewTitle": "Great Place to Stay!",
    "reviewText": "Clean and comfortable. Really nice staff.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-10T00:00:00.000Z"
    },
    "reviewTitle": "Road trip 2016",
    "reviewText": "We really liked this hotel. It was clean and the staff were young and friendly. One member of the staff was even treated poorly by a guest she asked to put shoes on while getting breakfast for health code reasons. She handled it very well and stayed calm and friendly. We would stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-14T00:00:00.000Z"
    },
    "reviewTitle": "Road trip 2016",
    "reviewText": "It was very delightful",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-02T00:00:00.000Z"
    },
    "reviewTitle": "Comfortable, friendly, but needs some repairs",
    "reviewText": "The staff was courteous and helpful. First room had a broken toilet. 2nd room had a sticking door that was VERY difficult to operate and broken deadbolt. The breakfast was very nice and the hotel was generally in OK condition. For the price, it was a good value.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-08T00:00:00.000Z"
    },
    "reviewTitle": "It was awseome .clean,comfy,",
    "reviewText": "We got their late. But pre booked the room. Very nice people clean and comfy room. Air was cold. Bed was very comfy.We slept great. We will for sure visit again. Thank you everyone.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-06T00:00:00.000Z"
    },
    "reviewTitle": "College visit",
    "reviewText": "Easy access, veer clean and responsible rates.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-20T00:00:00.000Z"
    },
    "reviewTitle": "Impressed",
    "reviewText": "This is an impressive hotel especially for the price! Great customer service. The hotel is very well kept. My room was updated and clean. Great choices for both a hot and cold breakfast.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-24T00:00:00.000Z"
    },
    "reviewTitle": "Impressed",
    "reviewText": "Maintenance responded well.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-15T00:00:00.000Z"
    },
    "reviewTitle": "Good price good room",
    "reviewText": "Great stop on cross country trip. Realistic not fancy not motel like",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-05T00:00:00.000Z"
    },
    "reviewTitle": "Good price good room",
    "reviewText": "Over all very good. Breakfast attendant could be more prompt in putting out food items that run low or out. ( went entire breakfast with egg container empty while other items were refilled",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-08T00:00:00.000Z"
    },
    "reviewTitle": "GREEN is GOOD!",
    "reviewText": "Just a clean comfortable hotel at the right price trying to be environmentally conscious. Loved the combination and the comfort. Highly recommend it. Also have electrical charging stations for cars.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-02T00:00:00.000Z"
    },
    "reviewTitle": "Always enjoy staying here",
    "reviewText": "We are in Springfield a few times a year, and this Greenstay is our go to hotel. We have always found it to be clean with very friendly staff, reasonable prices, and well maintained amenities. Our last visit was good as well. We will stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-04-28T00:00:00.000Z"
    },
    "reviewTitle": "Great price, great hotel!",
    "reviewText": "My husband and I were both very impressed with the quality of this hotel stay. He was hesitant about me booking this location because of the cost but we were both amazed at the service, quality and overall accommodations they provide. The room was exceptionally clean, the staff were extremely friendly and helpful, it was in a very convenient location and the breakfast was phenomenal. I expected the typical waffles and toast set up but was nicely surprised by a full breakfast buffet. We will definitely be returning guests when we visit this area again!!!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-09T00:00:00.000Z"
    },
    "reviewTitle": "Great value.",
    "reviewText": "For little more than the price of a Motel 6, you can stay at a quiet, cozy place like this. I can't believe they don't charge more. Maybe they will soon.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-11T00:00:00.000Z"
    },
    "reviewTitle": "Affordable luxury",
    "reviewText": "We were pleasantly surprised by the quality of the hotel based on the very competitive pricing we got through Expedia. Service was great, room was clean, breakfast was good although I wish it lasted long as my sleepy husband didn't wake in time. Over all we had a great stay!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-03T00:00:00.000Z"
    },
    "reviewTitle": "Would definitely stay here again!",
    "reviewText": "GREAT hotel!!! Very modern, updated, clean and friendly front desk worker. We had a Great Rate as well. Would definitely stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-18T00:00:00.000Z"
    },
    "reviewTitle": "Good place to stay.",
    "reviewText": "Had a little trouble with our card key, but it was fixed cheerfully and quickly. Nice staff. Elevator was a plus.Very upscale and nicely appointed for the price.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-29T00:00:00.000Z"
    },
    "reviewTitle": "Room stunk, if you have allergies stay away!",
    "reviewText": "Hotel appeared to be clean, however the room stunk. I thought it would go away with the use of AC, but it hasn't. Whatever was in the air triggered my asthma, had problems breathing, I was glad that I brought the inhaler along. Overall the worst hotel experience during our 10 day vacation. Reception clerks were nice, no complaints there.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 2
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-09T00:00:00.000Z"
    },
    "reviewTitle": "I love this hotel",
    "reviewText": "came in late on a rainy night was able to book online from my phone. both women at the desk very accomadating and fast checked me right in mere moments. to the room Georgeous elegant styling clean all the needed amenities. the BED was the highlight of my week luxury sheets perfectly comfortable mattress just the right amount of cush without being to soft. the topper is the pillows so good I want one for my own home. the Hotel was packed with volleyball teams who were in town. they were all over the building but in my room no noise at all. the following morning the breakfast buffett was perfect even better than some of the restaurants I eaten at this trip. Thank you for that totally made my day.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-13T00:00:00.000Z"
    },
    "reviewTitle": "Clean hotel, convenient location",
    "reviewText": "Great hotel for a quick stay. Although this hotel isn't fancy, it provides all of the basics needed for a stay. It's clean and the wifi is outstanding. One little gem was the onsite laundry at no cost. It's conveniently located to all of Springfield's major attractions. You are within 15 minutes of everything.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-13T00:00:00.000Z"
    },
    "reviewTitle": "Great stay",
    "reviewText": "Great! Just had a beer sitting by fridge Hate rubber slip mats and stains above it room 101",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-27T00:00:00.000Z"
    },
    "reviewTitle": "Great stay",
    "reviewText": "Thought room had a stale odor",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-03-24T00:00:00.000Z"
    },
    "reviewTitle": "nice stay",
    "reviewText": "Loved the animal names on the rooms. Good breakfast. Queen beds would have been better, double beds are a little small for 2 people. Good value.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-13T00:00:00.000Z"
    },
    "reviewTitle": "nice stay",
    "reviewText": "Delightful!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-16T00:00:00.000Z"
    },
    "reviewTitle": "Very convenient location!",
    "reviewText": "Check in was quick, friendly, and efficient. My room had one annoying problem (sagging shower curtain rod which prevented the curtain from closing fully) which was fixed within an hour of my reporting it to housekeeping and the front desk. The hot breakfast buffet has something for every diet. If not, many restaurants are within a 10-15 minute drive. I like having the option of NOT having fresh towels and bedding every day their green attitude fits well with my personal philosophy!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-08T00:00:00.000Z"
    },
    "reviewTitle": "Was one of the worst rooms I've had to stay in",
    "reviewText": "The carpet had a red koolaid stain and the bed sheets did as well... So either they didn't switch out sheets or they somehow ended up back in the room. The shower drain was also clogged.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 2
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-09T00:00:00.000Z"
    },
    "reviewTitle": "Nice Hotel - Good Location",
    "reviewText": "This was our 8th hotel in 9 days. It was by far the nicest hotel we stayed at for half the cost of the others. Each of the rooms have animal names, which makes it nice for families with young kids. The breakfast was standard breakfast fair - eggs, sausage, biscuits, gravy, potatoes, cereal, etc. It was decent, but nothing spectacular. The beds are double size, so a little small, but the room was a good size, so you weren't tripping over each other. Our only complaint was the air conditioners did not seem able to keep the room cool - in either room we were in. We had it set at 70, then moved it down to 66, but still sweat throughout the night. It was a muggy feeling. But other than that, this hotel was great.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-23T00:00:00.000Z"
    },
    "reviewTitle": "Comfortable and will be back!",
    "reviewText": "Staff and hotel was great. Loved the 24 hour coffee bar. Room was a bit musty smelling but was clean and tidy when we arrived. We'll be staying here again in the near future.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-28T00:00:00.000Z"
    },
    "reviewTitle": "Great stay off the highway",
    "reviewText": "We have visited this hotel annually for five years while traveling through the area. We like it for multiple reasons: always clean, comfortable beds, super, friendly staff, right off the highway and a good free breakfast. They are consistent. We've watched the owners do some upgrades the last couple years. There is pride in taking care of the hotel and their guests.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-28T00:00:00.000Z"
    },
    "reviewTitle": "Great value!",
    "reviewText": "Remodeled motel in nice condition was a pleasant surprise for the price. Very contemporary decor was fun. Good free breakfast, nice exercise room with complimentary washers and dryers. Great deal!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-03T00:00:00.000Z"
    },
    "reviewTitle": "Would stay here again.",
    "reviewText": "Good service, nice accommodations.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-03T00:00:00.000Z"
    },
    "reviewTitle": "great value",
    "reviewText": "this hotel is a great value for the money. A/C worked well, bed was comfortable, the free breakfast was good, except for running out of some items. The price was right. Good pool. so, we have booked again!!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-11T00:00:00.000Z"
    },
    "reviewTitle": "Baseball trip",
    "reviewText": "Very clean, quiet and relaxing!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-15T00:00:00.000Z"
    },
    "reviewTitle": "Where to stay in Springfield for Bears",
    "reviewText": "Dropping my son off for his second year at Missouri State, I was pleased to stay at Greenstay again as the staff is courteous, the rooms are clean, and the facilities are in excellent shape.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-23T00:00:00.000Z"
    },
    "reviewTitle": "Unsatisfied",
    "reviewText": "Well, we got a confirmation for a king bed with pullout couch. but all they gave us was a room with no couch and 2 beds, so my teenage daughter had to sleep on the floor. They had no rollaway beds. We had made 2 reservations and they had only one. AC didn't work very well. Bad lighting",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-18T00:00:00.000Z"
    },
    "reviewTitle": "Delightful hotel.",
    "reviewText": "Our room was perfect for me, my teen daughter and our 15 pound dog. It was upscale for a very reasonable price and dog fee is only 10 dollars. Great area as well. We will stay here often on our way from Wisconsin to Texas to visit other daughters. Staff was also extremely accommodating and room very clean. Pool looked very nice but we decided to relax in our room instead.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-07T00:00:00.000Z"
    },
    "reviewTitle": "Delightful hotel.",
    "reviewText": "We have stayed here several times. My daughter loves to see what animal our room will be when we get there. Breakfast is good. Will stay again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-07T00:00:00.000Z"
    },
    "reviewTitle": "Wish I could have stayed longer",
    "reviewText": "Just an overnight stay after attending our grandaughter's first dance recital. The room was fine. Just wish the fitness center was open 24 hours a day.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-22T00:00:00.000Z"
    },
    "reviewTitle": "Good one night stay for the bargain hunter",
    "reviewText": "The beds were less than desirable for comfort, but not terrible. They just weren't my sleep number bed. The air conditioning had trouble maintaining a comfortable level throughout the room. Felt like 13 degree difference between location of air conditioning and the far bed.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-27T00:00:00.000Z"
    },
    "reviewTitle": "Nice and clean",
    "reviewText": "I needed to book a hotel at the last minute and booked this one through Expedia. I was very pleased with the amenities and the cleanliness. I would stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-03T00:00:00.000Z"
    },
    "reviewTitle": "Nice and clean",
    "reviewText": "The housekeeper stole my shirt phone charger.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-07T00:00:00.000Z"
    },
    "reviewTitle": "Texan",
    "reviewText": "Our son, daughter-in-law and grandson live in Springfield and this is our go to place. It's convenient, clean and the price is good.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-11T00:00:00.000Z"
    },
    "reviewTitle": "Texan",
    "reviewText": "very clean hotel have stayed here in the past and will continue to do so when in the area",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-18T00:00:00.000Z"
    },
    "reviewTitle": "Texan",
    "reviewText": "The room was clean and comfortable. For the price, it was a perfect place to stop and spend a night during the long drive back from picking my daughter up at college. Safe area convenient to the interstate.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-12T00:00:00.000Z"
    },
    "reviewTitle": "Texan",
    "reviewText": "Great hotel. Next time we are in Missouri will stay there again. They the staff went above and beyond. The management needs to replace the US flag in front as it is tattered and torn. Overall 5 rating in my book.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-10T00:00:00.000Z"
    },
    "reviewTitle": "Nice place!",
    "reviewText": "Very nice property. Pleasant surprise!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-07T00:00:00.000Z"
    },
    "reviewTitle": "four star feel",
    "reviewText": "Great value for upscale hotel. Staff is friendly and helpful. Only negative is the tv/remote, can only change channls up and down.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-07T00:00:00.000Z"
    },
    "reviewTitle": "Loved the room - spacious and clean",
    "reviewText": "Very nice experience from start to finish. Very clean and smelled nice. Room had everything I needed and was spacious. Only suggestion would be to beef up the bathroom lighting because makeup application was somewhat difficult. Otherwise, just perfect and a great bargain!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-04-30T00:00:00.000Z"
    },
    "reviewTitle": "Loved the room - spacious and clean",
    "reviewText": "Very pleasant i would definitely stay again",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-30T00:00:00.000Z"
    },
    "reviewTitle": "Great hotel at a great price.",
    "reviewText": "Very clean and neat room. Nice decor overall. The only negitive thing, was I like a softer pillow and all they had was ver hard overstuffed ones (which some people do like).",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-13T00:00:00.000Z"
    },
    "reviewTitle": "Great hotel at a great price.",
    "reviewText": "Our stay was okay - nothing particularly noteworthy. We had stayed here before several years ago. Our biggest disappointment was the breakfast area was not set up for fast service with a crowd (which there was on Saturday) One employee did a terrific job keeping the food supplied, but people could not approach the food without waiting in a single line. Seating was also a problem.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-25T00:00:00.000Z"
    },
    "reviewTitle": "Accomadates pets, clean, comfy, great staff",
    "reviewText": "We enjoyed the comforts of this hotel so much on our way to our destination that we drove until midnight just to return for our overnight on our way back. Exceptional hotel!",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-03T00:00:00.000Z"
    },
    "reviewTitle": "Accomadates pets, clean, comfy, great staff",
    "reviewText": "Over all, our stay was nice. The hotel was out of the way enough to be quiet but not so much that it was hard to find. Having some places to eat within walking distance was nice. The hotel was very clean, and most of the staff was nice. The only issue I had with the stay was that they made me pay for it with a card that said my name, even though my boyfriend was right there willing to give them his card. We had to wait until the money was transfered from savings because that was the only card I had on me. It seemed a bit rediculous to force the reserve holder to pay, they were going to get their money either way......",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-22T00:00:00.000Z"
    },
    "reviewTitle": "Top notch for a great price",
    "reviewText": "The hotel was top notch. Clean and nice rooms with comfortable beds. we felt the staff was excellent. Professional, pleasant and personable. Outstanding breakfast. More than worth the price.Our first night was so good, we stayed the next night. Wish there were more locations.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2008-10-05T00:00:00.000Z"
    },
    "reviewTitle": "Top notch for a great price",
    "reviewText": "Moderately priced hotel chain offers a clean, consistent stay and complimentary breakfast. In ShortPart of the Hilton hotel family, this chain caters to travelers by offering high-quality accommodations at mid-range rates. Amenities include complimentary in-room high-speed Internet access, coffeemakers, irons and portable lap desks. Coffee and tea are offered round-the-clock in the lobby, and a free breakfast buffet with items like muffins, eggs, sausage and fruit is served daily. Fax service is available at the front desk.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-06-30T00:00:00.000Z"
    },
    "reviewTitle": "Top notch for a great price",
    "reviewText": "Clean, comfortable room. Easy on/off I44",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-07-20T00:00:00.000Z"
    },
    "reviewTitle": "Nice hotel with easy access.",
    "reviewText": "We have stayed at the Greenstay several times. It is consistently clean and comfortable with a good breakfast.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-05T00:00:00.000Z"
    },
    "reviewTitle": "Great Value",
    "reviewText": "This hotel was a great value. It was clean and well maintained. Stayed there while doing a college visit at MO State. If she decides to go there, this will be our permanent choice of hotel when in Springfield. Wish we'd know about it when we came for state tennis! I will look for GreenStays wherever I go from now on.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-03-11T00:00:00.000Z"
    },
    "reviewTitle": "Bring your ear plugs",
    "reviewText": "The place was pretty decent, but the walls seemed thin because I could hear trains going by all night. Both nights I was there, trains were waking me up every hour it seemed like, and the horns were so loud it was like they were in my room.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-08-05T00:00:00.000Z"
    },
    "reviewTitle": "Weekend getaway",
    "reviewText": "Great hotel at a great price, we will stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-06T00:00:00.000Z"
    },
    "reviewTitle": "Weekend getaway",
    "reviewText": "Comfortable for our purpose. Staff was informative about places to eat and the area. Please improve ur breakfast.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 2
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-10T00:00:00.000Z"
    },
    "reviewTitle": "Weekend getaway",
    "reviewText": "Hubs and I traveling Rt 66. Room was fine. Front desk staff very helpful. Close to the freeway. I would stay here again.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-05-11T00:00:00.000Z"
    },
    "reviewTitle": "Convientient hotel with comfortable beds.",
    "reviewText": "I only spent one night in a room here but was pleased. Friendly staff, clean rooms and facilities, near the freway but still quiet. They did offer a full breakfast in the morning the food could have been better but there were still plenty of options. I booked a room with a king bed and only paid 55 for the night. Overall I was very pleased with the hotel.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-10-01T00:00:00.000Z"
    },
    "reviewTitle": "Convientient hotel with comfortable beds.",
    "reviewText": "If in the area, I will definitely stay here again. The room was great and the bed and pillows were nice and comfy.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-15T00:00:00.000Z"
    },
    "reviewTitle": "Convientient hotel with comfortable beds.",
    "reviewText": ". The staff was very friendly, helpful and kind. The Get and Go bag for Sunday morning was special. Highly recommend.",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-09-16T00:00:00.000Z"
    },
    "reviewTitle": "Convientient hotel with comfortable beds.",
    "reviewText": "it was very nice, nice staff and clean hotel",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }]
} {
  "_id": {
    "$oid": "5cf9dcbe433d2b44c0de411a"
  },
  "name": "Royal Inn Motel",
  "categories": ["Hotel", "Hotels"],
  "location": {
    "country": "US",
    "state": "MD",
    "city": "Petersburg",
    "postalCode": "23803",
    "address": "23 S Little Church St",
    "coordinates": {
      "type": "Point",
      "coordinates": [-77.3928, 37.229694]
    }
  },
  "reviews": [{
    "reviewId": "",
    "reviewDate": {
      "$date": "2012-12-30T00:00:00.000Z"
    },
    "reviewTitle": "A Hospitable Place with Hospitable People",
    "reviewText": "I've traveled all over this great nation and have stayed at many hotels and motels. However NONE have had the type of hospitality that the The Royal Inn Motel has. The quaint rooms come with cable TV, WIFI, microwave, refrigerator, nice drinking cups, large marble vanity sinks with huge mirrors, carpeting, King size bed, excellent heat/AC and above all pet-friendly.... More",
    "reviewerCity": "Petersburg",
    "reviewerState": "VA",
    "reviewRating": 5
  }]
} {
  "_id": {
    "$oid": "5cf9dcbe433d2b44c0de411b"
  },
  "name": "Cambria Hotel \u0026 Suites",
  "categories": ["Luxury Hotels", "Restaurants", "Hotels \u0026 Motels", "Lodging", "Grill Restaurants", "Meeting Facilities"],
  "location": {
    "country": "US",
    "state": "MD",
    "city": "Roanoke",
    "postalCode": "24016",
    "address": "301 Reserve Ave",
    "coordinates": {
      "type": "Point",
      "coordinates": [-79.947005, 37.256149]
    }
  },
  "reviews": [{
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-12-19T00:00:00.000Z"
    },
    "reviewTitle": "Gorgeous rooms, delicious breakfast served with a smile :)",
    "reviewText": "The room was gorgeous with a nice view of the mountains. It was perfectly cleaned every day, and the luxurious shower provided a soothing way to relax on an otherwise packed business trip. Breakfast at the restaurant was delicious, with reasonable prices. I highly recommend trying some of the menu items as well as the buffet. And I was served... More",
    "reviewerCity": "",
    "reviewerState": "",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-02-10T00:00:00.000Z"
    },
    "reviewTitle": "If you're asking, 'Where should we stay' Stay here",
    "reviewText": "It's hard finding a hotel with an actual Suite - door separating the sleeping area from the living room/bathroom areas of a hotel room. With toddlers this can be the difference of going to bed at 7pm or eating by the glow of the tv screen...and all lights off. Or putting the kids to bed and eating and watching tv... More",
    "reviewerCity": "Brooklyn",
    "reviewerState": "NY",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-11-18T00:00:00.000Z"
    },
    "reviewTitle": "Good Hotel with a great staff",
    "reviewText": "This hotel is amazing. It is clean, well maintained, the staff is friendly and helpful. We were in town for a wedding and we were a large group. Keys were constantly getting lost, people were shuffling from room to room and somehow the front desk was always on top of our issues. The Best front desk clerk ever was Traci... More",
    "reviewerCity": "Lexington",
    "reviewerState": "KY",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-10-13T00:00:00.000Z"
    },
    "reviewTitle": "Great Hotel for our Wedding Guests",
    "reviewText": "We had 34 rooms for our wedding guests, and all enjoyed great service from the Cambria Suites Roanoke. The rooms were clean, the staff was courteous and helpful, the breakfast had good selections and the food tasted great. Pam, our breakfast server, went above and beyond in making sure we had everything we needed.",
    "reviewerCity": "Chesapeake",
    "reviewerState": "KY",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-01-06T00:00:00.000Z"
    },
    "reviewTitle": "Wonderful!",
    "reviewText": "I stayed here for an interview and I was very happy with my experience. Check in was quick and the parking garage on the ground floor has an elevator that goes straight to your floor (especially nice when it's cold out). The lobby is spacious with plenty of seating and they have a restaurant and bar. The king bed suite... More",
    "reviewerCity": "Chesapeake",
    "reviewerState": "KY",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-09-26T00:00:00.000Z"
    },
    "reviewTitle": "It's ok!",
    "reviewText": "It's a ok place rather pricey! We checked in last night. Underneath the desk is a half a straw wrapper and a giant smudge on the mirror. Truly makes me wonder about overall cleanliness of room. Reception on TV is broken and spotty. For 140.00 I would expect a clean room room without debris on floor. Very dusty room.",
    "reviewerCity": "Charlotte",
    "reviewerState": "NC",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-10-06T00:00:00.000Z"
    },
    "reviewTitle": "Did not like location, very desolate",
    "reviewText": "We checked in and parked in rear of the hotel, there is parking under it but there were no signs indicating that. Parking lot was scary at night, the hotel area is very desolate with a lot of boarded up factories. Their is a huge vacant lot in back of parking lot with railroad tracks, and no fence separating the... More",
    "reviewerCity": "Wantage",
    "reviewerState": "NJ",
    "reviewRating": 3
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-01-27T00:00:00.000Z"
    },
    "reviewTitle": "A great stay!",
    "reviewText": "We were traveling through and needed an easy overnight stay. I found this hotel through hotels.com and took a chance - very glad we did. This hotel exceeded our expectations! I booked a room with a king-sized bed (but not a suite) and I was pleasantly surprised to find our room was set up like a suite with a dividing... More",
    "reviewerCity": "Oneonta",
    "reviewerState": "NY",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-03-03T00:00:00.000Z"
    },
    "reviewTitle": "The other reviews were spot on!",
    "reviewText": "We really enjoyed our stay at Cambria. A very nice hotel and wonderful customer service from everyone we encountered! The location and amenities were perfect. I loved the fact that the greenway was right across the street too! We will definitely stay here again when we're in Roanoke!",
    "reviewerCity": "Asheville",
    "reviewerState": "NC",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-02-22T00:00:00.000Z"
    },
    "reviewTitle": "Noisy and foul odors",
    "reviewText": "We chose this location based on the suite , indoor pool and ratings on trip advisor. Our stay got off on the wrong foot, no rooms seemed to be ready , however we understood that check was at 4 pm and we were around an hour early, so we were told they would call when a room was ready, well... More",
    "reviewerCity": "Asheville",
    "reviewerState": "NC",
    "reviewRating": 2
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-12-03T00:00:00.000Z"
    },
    "reviewTitle": "Extra Large Rooms!",
    "reviewText": "Extremely friendly helpful staff. Location was away from the airport exactly where I wanted to be. Sat in the lobby/lounge to read a book, watch TV read the Newspaper they provided. I really liked the extra large room with a separate sitting room that has a desk and another TV. The only downside was that for the price,... More",
    "reviewerCity": "Sarasota",
    "reviewerState": "FL",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-01-02T00:00:00.000Z"
    },
    "reviewTitle": "Lovely hotel and great price",
    "reviewText": "Our stay was fabulous. The hotel was beautiful and staff very friendly and helpful. The price compared to other hotels in the area was outstanding! Would definitely stay here again. Loved out stay! Asked for a late check out and was given an hour at no charge. Room clean, pool and fitness were nice. Did not eat at the hotel... More",
    "reviewerCity": "Sarasota",
    "reviewerState": "FL",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-02-16T00:00:00.000Z"
    },
    "reviewTitle": "Lovely hotel, friendly staff",
    "reviewText": "A friend and I met here for a concert on Valentine's Day weekend and stayed in a two-queen suite for two nights. The room was modern, spacious, and quiet, and the beds were amazingly comfortable. We especially liked the media ports on the wall next to the living area TV, which made connecting laptops for media viewing easy and convenient,... More",
    "reviewerCity": "Macon",
    "reviewerState": "GA",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-10-23T00:00:00.000Z"
    },
    "reviewTitle": "Good coffee in the lobby",
    "reviewText": "We came through here after going on the Skyline Drive. Very convenient location.Underground parking is a plus. The room is an upscale suite with two flat screen tv's, walk in closets, sitting area with a fridge and microwave. There is a desk for people who need to work. Very well equipped and restful in a quiet area. The coffee in... More",
    "reviewerCity": "Tavares",
    "reviewerState": "FL",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-01-28T00:00:00.000Z"
    },
    "reviewTitle": "A good time",
    "reviewText": "We live in Blacksburg came to stay for our anniversary. Things started out a little rough upon checking in. Our room was better than expected, very stylish and up to date. The bathroom looked like something out of a magazine, honestly! Beds are very comfortable as well. We had time to spend in the pool area, which includes a... More",
    "reviewerCity": "Blacksburg",
    "reviewerState": "VA",
    "reviewRating": 4
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-12-26T00:00:00.000Z"
    },
    "reviewTitle": "Very nice stay",
    "reviewText": "I have stayed here several times. Yeah it is about 10 mins off my route North on I 81 but I feel it is well worth it. Check-In went quickly and smoothly, my room was ready this trip, but not 5 mins after I got settled in, someone attempted to enter. It was the post housekeeping inspection. By most standards... More",
    "reviewerCity": "Atlanta",
    "reviewerState": "GA",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2015-12-22T00:00:00.000Z"
    },
    "reviewTitle": "Loved Everything",
    "reviewText": "This was a great hotel. The staff was extremely courteous. Even though their normal check in time is 3pm, I arrived at 11am and they gave me the room almost immediately. Beds were super comfortable. The room I was in had 2 flat screen TVs and a couch which was pretty cool. Staff had things like toothpaste and combs handy... More",
    "reviewerCity": "Houston",
    "reviewerState": "TX",
    "reviewRating": 5
  }, {
    "reviewId": "",
    "reviewDate": {
      "$date": "2016-03-01T00:00:00.000Z"
    },
    "reviewTitle": "Weekend Getaway",
    "reviewText": "Had a great stay here everything was wonderful room very spacious! We stayed 3 days and was very satisfied. Loved how the layout of the room was beds very comfy,flat screen tvs! Loved we actually had glasses in the room instead of plastic cups. Had everything we needed.",
    "reviewerCity": "Houston",
    "reviewerState": "TX",
    "reviewRating": 5
  }, {
